# jump_hub

./: .gitignore  .nojekyll  CLAUDE.md  CONTRIBUTING.html  CONTRIBUTING.ipynb  _quarto.yml  cite.html  cite.ipynb  flake.nix  index.html  index.ipynb  index.md  pyproject.toml  readme.html  readme.ipynb  search.json  sitemap.xml
.claude/: settings.local.json
colab/: 0_howto.ipynb  0_howto_interactive_tools.ipynb  0_overview.ipynb  11_retrieve_profiles.ipynb  12_add_metadata.ipynb  13_calculate_activity.ipynb  14_display_perturbation_images.ipynb  15_explore_distance_clusters.ipynb  16_query_genes_externally.ipynb  1_jumprr_steps.ipynb  1_retrieve_profiles.ipynb  2_add_metadata.ipynb  3_calculate_activity.ipynb  4_display_perturbation_images.ipynb  5_explore_distance_clusters.ipynb  6_query_genes_externally.ipynb
explanations/: FAQ.html  FAQ.ipynb  FAQ.md  data_description.html  data_description.ipynb  data_description.md  known_issues.html  known_issues.ipynb  quirks_details.html  quirks_details.ipynb
howto/: 0_howto.html  0_howto.ipynb  0_howto_interactive_tools.html  0_howto_interactive_tools.ipynb  0_howto_interactive_tools.md  11_retrieve_profiles.html  11_retrieve_profiles.ipynb  12_add_metadata.html  12_add_metadata.ipynb  13_calculate_activity.html  13_calculate_activity.ipynb  14_display_perturbation_images.html  14_display_perturbation_images.ipynb  15_explore_distance_clusters.html  15_explore_distance_clusters.ipynb  16_query_genes_externally.html  16_query_genes_externally.ipynb  1_jumprr_steps.html  1_jumprr_steps.ipynb  1_retrieve_profiles.html  (+13 more)
(+67 files in other folders)
