[project]
authors = [
    {name = "Alan Munoz"},
]
requires-python = "<3.13,>=3.10"
dependencies = [
    "boto3",
    "matplotlib<4.0.0,>=3.8.2",
    "polars<2.0.0,>=1.5.0",
    "pyarrow>=15.0.0",
    "s3fs>=2023.12.1",
    "seaborn<1.0.0,>=0.13.2",
    "biopython<2.0,>=1.84",
    "broad-babel>=0.1.31",
    "copairs>=0.5.4,<1.0.0; python_version < '3.13'",
    "jump-portrait>=0.1.1",
    "itables>=2.2.5",
]
name = "jump_deps"
version = "0.0.9"
description = "Convenience package to add dependencies for JUMP exploratory analysis"
readme = "readme.md"

[project.urls]
Homepage = "https://github.com/broadinstitute/"

[tool.jupytext.formats]
"howto/notebooks" = ".qmd"
"scripts/" = "py:percent"

[tool.pdm.build]
includes = ["jump_deps"]

[tool.setuptools]
packages = ["jump_deps"]

[dependency-groups]
dev = [
    "ipdb<1.0.0,>=0.13.13",
    "jupyter<2.0.0,>=1.0.0",
    "jupytext<2.0.0,>=1.15.0",
    "pytest<8.0.0,>=7.4.1",
]

[tool.uv.workspace]
members = []
